; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/extr_lua-bson.c_pack_dict_data.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/extr_lua-bson.c_pack_dict_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bson = type { i32 }

@.str = private unnamed_addr constant [38 x i8] c"Bson dictionary's key can't be number\00", align 1
@.str.1 = private unnamed_addr constant [22 x i8] c"Invalid key type : %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, %struct.bson*, i32, i32)* @pack_dict_data to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pack_dict_data(i32* %0, %struct.bson* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca %struct.bson*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store %struct.bson* %1, %struct.bson** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  store i8* null, i8** %9, align 8
  %11 = load i32, i32* %8, align 4
  switch i32 %11, label %26 [
    i32 129, label %12
    i32 128, label %15
  ]

12:                                               ; preds = %4
  %13 = load i32*, i32** %5, align 8
  %14 = call i32 (i32*, i8*, ...) @luaL_error(i32* %13, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0))
  br label %32

15:                                               ; preds = %4
  %16 = load i32*, i32** %5, align 8
  %17 = call i8* @lua_tolstring(i32* %16, i32 -2, i64* %10)
  store i8* %17, i8** %9, align 8
  %18 = load %struct.bson*, %struct.bson** %6, align 8
  %19 = load i32*, i32** %5, align 8
  %20 = load i8*, i8** %9, align 8
  %21 = load i64, i64* %10, align 8
  %22 = load i32, i32* %7, align 4
  %23 = call i32 @append_one(%struct.bson* %18, i32* %19, i8* %20, i64 %21, i32 %22)
  %24 = load i32*, i32** %5, align 8
  %25 = call i32 @lua_pop(i32* %24, i32 1)
  br label %32

26:                                               ; preds = %4
  %27 = load i32*, i32** %5, align 8
  %28 = load i32*, i32** %5, align 8
  %29 = load i32, i32* %8, align 4
  %30 = call i32 @lua_typename(i32* %28, i32 %29)
  %31 = call i32 (i32*, i8*, ...) @luaL_error(i32* %27, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.1, i64 0, i64 0), i32 %30)
  br label %32

32:                                               ; preds = %26, %15, %12
  ret void
}

declare dso_local i32 @luaL_error(i32*, i8*, ...) #1

declare dso_local i8* @lua_tolstring(i32*, i32, i64*) #1

declare dso_local i32 @append_one(%struct.bson*, i32*, i8*, i64, i32) #1

declare dso_local i32 @lua_pop(i32*, i32) #1

declare dso_local i32 @lua_typename(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
